GKE/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: pingpong-app
  labels:
    app: pingpong-app
spec:
  replicas: 1
  selector:
    matchLabels:
      app: pingpong-app
  template:
    metadata:
      labels:
        app: pingpong-app
    spec:
      containers:
        - name: pingpong
          image: gcr.io/dwk-gke-466114/pingpong:latest
          imagePullPolicy: Always
          resources:
            requests:
              memory: "32Mi"
              cpu: "25m"
            limits:
              memory: "64Mi"
              cpu: "50m"
