GKE/logoutput-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: logoutput-service
  labels:
    app: logoutput-app
spec:
  type: ClusterIP
  selector:
    app: logoutput-app
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
